Messed with some graph widths and colors.

--- a/css/main.css
+++ b/css/main.css
@@ -45,16 +45,5 @@
 	width: 100%;
 	margin-bottom:0.5em;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
+.general_technology { background-color: #999; width:50%; }
+.industry_complexity { background-color: #999; width:75%; }
